removed left margin to fix spacing in nav

--- a/main.css
+++ b/main.css
@@ -22,7 +22,6 @@ a {
 
 .name {
     font-size: 18px;
-    margin-left: 10px ;
     text-decoration: none;
     opacity: 0.1; 
     color: white;
@@ -54,16 +53,17 @@ i {
     background-color: rgb(33, 156, 239);
 }
 
-nav.scroll {
+#nav.scroll {
     background-color: white;
+
 }
 
-nav {
+#nav {
     position: fixed;
-    padding: 9px;
     width: 100%;
     transition: background-color 0.4s ease-out;
     display: flex;
     justify-content: space-between ;
     color: white;
+    padding: 9px;
   }
